Add download handler for main app
